log
Fri 21 Apr 2023 06:45:33 PM UTC: 
 tests:  1|8
total_score: 0/70
5180414
Fri 21 Apr 2023 07:04:55 PM UTC: 
 treemap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
9203d5e
Fri 21 Apr 2023 07:26:13 PM UTC: 
 treemap.c | 22 ++++++++++++++++++++--
 1 file changed, 20 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:51:23: error: initialization of ‘TreeNode *’ from incompatible pointer type ‘Pair *’ [-Werror=incompatible-pointer-types]
   51 |   TreeNode *nodoAux = searchTreeMap(tree,key);
      |                       ^~~~~~~~~~~~~
treemap.c:53:1: error: expected expression before ‘}’ token
   53 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
e645b8e
Fri 21 Apr 2023 07:26:33 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
72e5b2e
Fri 21 Apr 2023 07:28:34 PM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  6|6
total_score: 5/70
a2e61a9
Fri 21 Apr 2023 07:41:21 PM UTC: 
 treemap.c | 12 ++----------
 1 file changed, 2 insertions(+), 10 deletions(-)
 tests:  7|6
total_score: 5/70
8e5366b
Sat 22 Apr 2023 02:35:30 AM UTC: 
 treemap.c | 17 ++++++++++++++---
 1 file changed, 14 insertions(+), 3 deletions(-)
 tests:  13|5
total_score: 15/70
8ad0aee
Sat 22 Apr 2023 03:35:39 AM UTC: 
 treemap.c | 42 ++++++++++++++++++++++++++++++++++++++++--
 1 file changed, 40 insertions(+), 2 deletions(-)
 tests:  0|0
7f3d356
Sat 22 Apr 2023 03:37:48 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  15|4
total_score: 25/70
40c22b5
Sat 22 Apr 2023 03:47:15 AM UTC: 
 treemap.c | 17 ++++++++++++++---
 1 file changed, 14 insertions(+), 3 deletions(-)
 tests:  17|4
total_score: 30/70
2933021
